Replaced CUfon with TypeKit. Finally!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="Description" content="Benjamin Wiederkehr, wholeheartedly passionate about making things understandable. Partner at Interactive Things, Editor at Datavisualization.ch." />
 	<meta name="Keywords" content="Benjamin, Wiederkehr, Benjamin Wiederkehr, Interactive Things, Datavisualization.ch, Interaction Design, User Experience Design, Data Visualization" />
 	<meta name="Author" content="Benjamin Wiederkehr" />
-	<meta name="Copyright" content="2010" />
+	<meta name="Copyright" content="2012" />
 	<meta name="Distribution" content="Global" />
 	<meta name="Language" content="en" />
 	<meta name="Robots" content="ALL" />
@@ -24,11 +24,11 @@
 	  <link rel="stylesheet" href="css/global/ie.css" type="text/css" media="screen, projection" />
 	<![endif]-->
 	<!-- ——————————————————————————————————————————————————————————————————— JS -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.coda-slider-2.0.js"></script>
-	<script type="text/javascript" src="assets/js/cufon-yui.js"></script>
-	<script type="text/javascript" src="assets/js/netto_350-netto_700.font.js"></script>
+	<script type="text/javascript" src="http://use.typekit.com/aea1puq.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<script type="text/javascript" src="assets/js/intro.js"></script>
 </head>
 <body>
