Added meeting dates

--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
 						<div class="panel-wrapper">
 							<ul class="cols-1">
 								<li>
+									<a href="http://liftconference.com/" title="Lift Conference">
+										<span class="cal">
+											<span class="cal_month">Feb</span>
+											<span class="cal_day">23</span>
+										</span>
+										<h3>Lift Conference</h3>
+										<p><strong>Geneva, Switzerland</strong> Presenting The Ville Vivante Project</p>
+									</a>
+								</li>
+								<li>
 									<a href="http://sxsw.interactivethings.com/" title="SXSW Interactive">
 										<span class="cal">
 											<span class="cal_month">Mar</span>
@@ -188,6 +198,16 @@
 										</span>
 										<h3>SEE Conference</h3>
 										<p><strong>Wiesbaden, Germany</strong> The Conference on Information Visualization</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://eyeofestival.com/" title="Eyeo Festival">
+										<span class="cal">
+											<span class="cal_month">Jun</span>
+											<span class="cal_day">05</span>
+										</span>
+										<h3>Eyeo Festival</h3>
+										<p><strong>Minneapolis, USA</strong> Converge to Inspire</p>
 									</a>
 								</li>
 							</ul>
