Added bio under the Who I Am tab.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- ——————————————————————————————————————————————————————————————————— META -->
 	<meta charset="UTF-8" />
-	<title>Benjamin Wiederkehr | User Experience Designer</title>
+	<title>Benjamin Wiederkehr | Interaction and User Experience Designer</title>
 	<meta name="Description" content="Benjamin Wiederkehr, wholeheartedly passionate about making things understandable. Partner at Interactive Things, Editor at Datavisualization.ch." />
 	<meta name="Keywords" content="Benjamin, Wiederkehr, Benjamin Wiederkehr, Interactive Things, Datavisualization.ch, Interaction Design, User Experience Design, Data Visualization" />
 	<meta name="Author" content="Benjamin Wiederkehr" />
@@ -69,9 +69,10 @@
 				<div id="coda-nav-1" class="coda-nav">
 					<ul>
 						<li class="tab1"><a href="#1" title="What I Do">What I Do</a></li>
-						<li class="tab2"><a href="#2" title="Add me to your network">Network</a></li>
+						<li class="tab2"><a href="#2" title="Who I am">Who I am</a></li>
 						<li class="tab3"><a href="#3" title="Connect with me">Connect</a></li>
-						<li class="tab4"><a href="#4" title="Meet up at one of these occasions">Meet</a></li>
+						<li class="tab4"><a href="#4" title="Contact me">Contact</a></li>
+						<li class="tab5"><a href="#5" title="Meet up at one of these occasions">Meet</a></li>
 					</ul>
 				</div>
 				<div class="coda-slider preload" id="coda-slider-1">
@@ -107,6 +108,11 @@
 									</a>
 								</li>
 							</ul>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel-wrapper">
+							<p class="bio">Benjamin Wiederkehr is an interaction designer with a focus on information visualization and interface design. He is founding partner and managing director of Interactive Things, an user experience design and data visualization studio he established in 2010 together with Christian Siegrist and Jeremy Stucki. The Zurich based team designs and implements interactive products and visualizations for national and international clients including the UNDP, UNESCO, Mozilla and National Geographic. Interactive Things is also part of the Open Government Data task force in Switzerland and helps to facilitate an open access to government data for everyone. On Datavisualization.ch, Benjamin provides insight into his research and working process as well as he documents topical use cases in the field of data visualization. His work and research interests center around persuasive technology, information and knowledge visualization and cartography.</p>
 						</div>
 					</div>
 					<div class="panel">
