Added new 2012 events.

--- a/index.html
+++ b/index.html
@@ -216,6 +216,26 @@
 										<p><strong>Minneapolis, USA</strong> Converge to Inspire</p>
 									</a>
 								</li>
+								<li>
+									<a href="http://www.medienwoche.de/" title="Internationaler Medienkongress">
+										<span class="cal">
+											<span class="cal_month">Sep</span>
+											<span class="cal_day">04</span>
+										</span>
+										<h3>Internationaler Medienkongress</h3>
+										<p><strong>Berlin, Germany</strong> Experience Data: The Art of Visualizing Facts & Figures</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://visualized.com/" title="Visualized">
+										<span class="cal">
+											<span class="cal_month">Nov</span>
+											<span class="cal_day">08</span>
+										</span>
+										<h3>Visualized</h3>
+										<p><strong>New York, USA</strong> See who is changing the world, visually.</p>
+									</a>
+								</li>
 							</ul>
 						</div>
 					</div>
