Added new «meet» dates.

--- a/index.html
+++ b/index.html
@@ -175,26 +175,68 @@
 					</div>
 					<div class="panel">
 						<div class="panel-wrapper">
+						  <h3 class="cal_headline">Upcoming</h3>
 							<ul class="cols-1">
 								<li>
 									<a href="http://liftconference.com/" title="Lift Conference">
 										<span class="cal">
-											<span class="cal_month">Feb</span>
-											<span class="cal_day">23</span>
+											<span class="cal_month">Jan</span>
+											<span class="cal_day">31</span>
 										</span>
-										<h3>Lift Conference</h3>
-										<p><strong>Geneva, Switzerland</strong> Presenting The Ville Vivante Project</p>
+										<h3>Swiss UPA</h3>
+										<p><strong>Z&uuml;rich, Switzerland</strong> Introduction to Data Visualization</p>
 									</a>
 								</li>
 								<li>
-									<a href="http://sxsw.interactivethings.com/" title="SXSW Interactive">
+									<a href="http://liftconference.com/" title="Lift Conference">
 										<span class="cal">
-											<span class="cal_month">Mar</span>
-											<span class="cal_day">12</span>
+											<span class="cal_month">Feb</span>
+											<span class="cal_day">06</span>
 										</span>
-										<h3>SXW Interactive</h3>
-										<p><strong>Austin, USA</strong> Intent &amp; Impact: How Visualization Makes A Change</p>
+										<h3>Lift Conference</h3>
+										<p><strong>Geneva, Switzerland</strong> Workshop on Persuasive Design</p>
 									</a>
+								</li>
+							</ul>
+							<h3 class="cal_headline">2012</h3>
+							<ul class="cols-1">
+								<li>
+									<a href="http://junior-research.ch" title="Junior Design Research Conference">
+										<span class="cal">
+											<span class="cal_month">Nov</span>
+											<span class="cal_day">15</span>
+										</span>
+										<h3>Junior Design Research Conference</h3>
+										<p><strong>Geneva, Switzerland</strong> Persuasion in Information Design</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://visualized.com/" title="Visualized">
+										<span class="cal">
+											<span class="cal_month">Nov</span>
+											<span class="cal_day">08</span>
+										</span>
+										<h3>Visualized</h3>
+										<p><strong>New York, USA</strong> Parts of the Process</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://www.medienwoche.de/" title="Internationaler Medienkongress">
+										<span class="cal">
+											<span class="cal_month">Sep</span>
+											<span class="cal_day">04</span>
+										</span>
+										<h3>Int. Medienkongress</h3>
+										<p><strong>Berlin, Germany</strong> Experience Data: The Art of Visualizing Facts & Figures</p>
+									</a>
+								</li>
+								<li>
+										<span class="cal">
+											<span class="cal_month">Jun</span>
+											<span class="cal_day">27</span>
+										</span>
+										<h3>UNECE</h3>
+										<p><strong>Geneva, Switzerland</strong> Work Session on the Communication of Statistics</p>
 								</li>
 								<li>
 									<a href="http://see-conference.com" title="SEE Conference">
@@ -207,33 +249,104 @@
 									</a>
 								</li>
 								<li>
+										<span class="cal">
+											<span class="cal_month">Mar</span>
+											<span class="cal_day">24</span>
+										</span>
+										<h3>UC Berkeley School of Information</h3>
+										<p><strong>Berkeley, USA</strong> Workshop on Data Visualization</p>
+								</li>
+								<li>
+										<span class="cal">
+											<span class="cal_month">Mar</span>
+											<span class="cal_day">23</span>
+										</span>
+										<h3>LinkedIn</h3>
+										<p><strong>San Francisco, USA</strong> Introduction to Data Visualization</p>
+								</li>
+								<li>
+									<a href="http://sxsw.interactivethings.com/" title="SXSW Interactive">
+										<span class="cal">
+											<span class="cal_month">Mar</span>
+											<span class="cal_day">12</span>
+										</span>
+										<h3>SXW Interactive</h3>
+										<p><strong>Austin, USA</strong> Intent &amp; Impact: How Visualization Makes A Change</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://liftconference.com/" title="Lift Conference">
+										<span class="cal">
+											<span class="cal_month">Feb</span>
+											<span class="cal_day">23</span>
+										</span>
+										<h3>Lift Conference</h3>
+										<p><strong>Geneva, Switzerland</strong> Presenting The Ville Vivante Project</p>
+									</a>
+								</li>
+							</ul>
+							<h3 class="cal_headline">2011</h3>
+							<ul class="cols-1">
+								<li>
+										<span class="cal">
+											<span class="cal_month">Dez</span>
+											<span class="cal_day">12</span>
+										</span>
+										<h3>Swiss Informatics Society</h3>
+										<p><strong>Z&uuml;rich, Switzerland</strong> Workshop on Data Visualization</p>
+								</li>
+								<li>
+										<span class="cal">
+											<span class="cal_month">Sep</span>
+											<span class="cal_day">16</span>
+										</span>
+										<h3>Trend Forum Basel</h3>
+										<p><strong>Basel, Switzerland</strong> Introduction to Data Visualization</p>
+								</li>
+								<li>
 									<a href="http://eyeofestival.com/" title="Eyeo Festival">
 										<span class="cal">
 											<span class="cal_month">Jun</span>
-											<span class="cal_day">05</span>
+											<span class="cal_day">27</span>
 										</span>
 										<h3>Eyeo Festival</h3>
 										<p><strong>Minneapolis, USA</strong> Converge to Inspire</p>
 									</a>
 								</li>
 								<li>
-									<a href="http://www.medienwoche.de/" title="Internationaler Medienkongress">
 										<span class="cal">
-											<span class="cal_month">Sep</span>
-											<span class="cal_day">04</span>
+											<span class="cal_month">Jun</span>
+											<span class="cal_day">25</span>
 										</span>
-										<h3>Internationaler Medienkongress</h3>
-										<p><strong>Berlin, Germany</strong> Experience Data: The Art of Visualizing Facts & Figures</p>
+										<h3>Data In Sight</h3>
+										<p><strong>San Francisco, USA</strong></p>
+								</li>
+								<li>
+										<span class="cal">
+											<span class="cal_month">Jun</span>
+											<span class="cal_day">23</span>
+										</span>
+										<h3>Mozilla</h3>
+										<p><strong>San Francisco, USA</strong> Introduction to Everyday Visualization</p>
+								</li>
+								<li>
+									<a href="http://see-conference.com" title="SEE Conference">
+										<span class="cal">
+											<span class="cal_month">Apr</span>
+											<span class="cal_day">09</span>
+										</span>
+										<h3>SEE Conference</h3>
+										<p><strong>Wiesbaden, Germany</strong> The Conference on Information Visualization</p>
 									</a>
 								</li>
 								<li>
-									<a href="http://visualized.com/" title="Visualized">
+									<a href="http://sxsw.interactivethings.com/" title="SXSW Interactive">
 										<span class="cal">
-											<span class="cal_month">Nov</span>
-											<span class="cal_day">08</span>
+											<span class="cal_month">Mar</span>
+											<span class="cal_day">12</span>
 										</span>
-										<h3>Visualized</h3>
-										<p><strong>New York, USA</strong> See who is changing the world, visually.</p>
+										<h3>SXW Interactive</h3>
+										<p><strong>Austin, USA</strong> Social Media Data Visualization</p>
 									</a>
 								</li>
 							</ul>
