--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
 					<div class="panel">
 						<div class="panel-wrapper">
 						  <h3 class="cal_headline">Upcoming</h3>
-							<ul class="cols-1">
+							<ul class="cols-1 upcoming-dates">
 								<li>
-									<a href="http://liftconference.com/" title="Lift Conference">
+									<a href="http://ux-schweiz.ch" title="UX Schweiz">
 										<span class="cal">
 											<span class="cal_month">Jan</span>
 											<span class="cal_day">31</span>
 										</span>
-										<h3>Swiss UPA</h3>
-										<p><strong>Z&uuml;rich, Switzerland</strong> Introduction to Data Visualization</p>
+										<h3>UX Schweiz</h3>
+										<p><strong>Z&uuml;rich, Switzerland</strong> Benutzerzentrierte Gestaltung interaktiver Datenvisualisierung</p>
 									</a>
 								</li>
 								<li>
@@ -197,9 +197,19 @@
 										<p><strong>Geneva, Switzerland</strong> Workshop on Persuasive Design</p>
 									</a>
 								</li>
+								<li>
+									<a href="http://www.typotag.de" title="Lift Conference">
+										<span class="cal">
+											<span class="cal_month">Feb</span>
+											<span class="cal_day">22</span>
+										</span>
+										<h3>Typotag</h3>
+										<p><strong>Munich, Germany</strong> Talk on Information Visualization</p>
+									</a>
+								</li>
 							</ul>
 							<h3 class="cal_headline">2012</h3>
-							<ul class="cols-1">
+							<ul class="cols-1 past-dates">
 								<li>
 									<a href="http://junior-research.ch" title="Junior Design Research Conference">
 										<span class="cal">
@@ -286,7 +296,7 @@
 								</li>
 							</ul>
 							<h3 class="cal_headline">2011</h3>
-							<ul class="cols-1">
+							<ul class="cols-1 past-dates">
 								<li>
 										<span class="cal">
 											<span class="cal_month">Dez</span>
