--- a/index.html
+++ b/index.html
@@ -178,16 +178,6 @@
 						  <h3 class="cal_headline">Upcoming</h3>
 							<ul class="cols-1 upcoming-dates">
 								<li>
-									<a href="http://ux-schweiz.ch" title="UX Schweiz">
-										<span class="cal">
-											<span class="cal_month">Jan</span>
-											<span class="cal_day">31</span>
-										</span>
-										<h3>UX Schweiz</h3>
-										<p><strong>Z&uuml;rich, Switzerland</strong> Benutzerzentrierte Gestaltung interaktiver Datenvisualisierung</p>
-									</a>
-								</li>
-								<li>
 									<a href="http://liftconference.com/" title="Lift Conference">
 										<span class="cal">
 											<span class="cal_month">Feb</span>
@@ -198,13 +188,56 @@
 									</a>
 								</li>
 								<li>
-									<a href="http://www.typotag.de" title="Lift Conference">
+									<a href="http://www.typotag.de" title="Typotag">
 										<span class="cal">
 											<span class="cal_month">Feb</span>
 											<span class="cal_day">22</span>
 										</span>
 										<h3>Typotag</h3>
 										<p><strong>Munich, Germany</strong> Talk on Information Visualization</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://see-conference.org" title="SEE Conference">
+										<span class="cal">
+											<span class="cal_month">Apr</span>
+											<span class="cal_day">20</span>
+										</span>
+										<h3>SEE Conference</h3>
+										<p><strong>Wiesbaden, Germany</strong> The Conference on Information Visualization</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://eyeofestival.com" title="Eyeo Festival">
+										<span class="cal">
+											<span class="cal_month">Jun</span>
+											<span class="cal_day">05</span>
+										</span>
+										<h3>Eyeo Festival</h3>
+										<p><strong>Minneapolis, USA</strong> Converge to Inspire</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://www.eb-zuerich.ch/blog/veranstaltungen/" title="Digitale Wirklichkeiten">
+										<span class="cal">
+											<span class="cal_month">Jun</span>
+											<span class="cal_day">25</span>
+										</span>
+										<h3>Digitale Wirklichkeiten</h3>
+										<p><strong>Z&uuml;rich, Switzerland</strong> Talk on Information Visualization</p>
+									</a>
+								</li>
+							</ul>
+							<h3 class="cal_headline">2013</h3>
+							<ul class="cols-1 past-dates">
+								<li>
+									<a href="http://ux-schweiz.ch" title="UX Schweiz">
+										<span class="cal">
+											<span class="cal_month">Jan</span>
+											<span class="cal_day">31</span>
+										</span>
+										<h3>UX Schweiz</h3>
+										<p><strong>Z&uuml;rich, Switzerland</strong> Designing User-Centered Visualizations</p>
 									</a>
 								</li>
 							</ul>
@@ -249,7 +282,7 @@
 										<p><strong>Geneva, Switzerland</strong> Work Session on the Communication of Statistics</p>
 								</li>
 								<li>
-									<a href="http://see-conference.com" title="SEE Conference">
+									<a href="http://see-conference.org" title="SEE Conference">
 										<span class="cal">
 											<span class="cal_month">Apr</span>
 											<span class="cal_day">07</span>
@@ -340,7 +373,7 @@
 										<p><strong>San Francisco, USA</strong> Introduction to Everyday Visualization</p>
 								</li>
 								<li>
-									<a href="http://see-conference.com" title="SEE Conference">
+									<a href="http://see-conference.org" title="SEE Conference">
 										<span class="cal">
 											<span class="cal_month">Apr</span>
 											<span class="cal_day">09</span>
