Added OKCon and Namics Conference to the upcoming events.

--- a/index.html
+++ b/index.html
@@ -207,6 +207,26 @@
 										<p><strong>Z&uuml;rich, Switzerland</strong> Talk on Information Visualization</p>
 									</a>
 								</li>
+								<li>
+									<a href="http://www.namics.com" title="Namics Conference">
+										<span class="cal">
+											<span class="cal_month">Aug</span>
+											<span class="cal_day">29</span>
+										</span>
+										<h3>Namics Conference</h3>
+										<p><strong>Innsbruck, Austria</strong> Talk on Information Visualization</p>
+									</a>
+								</li>
+								<li>
+									<a href="http://okcon.org" title="Open Knowledge Conference">
+										<span class="cal">
+											<span class="cal_month">Sep</span>
+											<span class="cal_day">17</span>
+										</span>
+										<h3>Open Knowledge Conference</h3>
+										<p><strong>Geneva, Switzerland</strong> Curating of the Visualization Track</p>
+									</a>
+								</li>
 							</ul>
 							<h3 class="cal_headline">2013</h3>
 							<ul class="cols-1 past-dates">
